[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_params"
version = "0.1.0"
description = "Simplified pytest test case parameters."
readme = "README.rst"
authors = [
  {name = "Joao Coelho", email = "6wfon3p6d@mozmail.com"}
]
maintainers = [
  {name = "Joao Coelho", email = "6wfon3p6d@mozmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/joaonc/pytest_params/issues"
changelog = "https://github.com/joaonc/pytest_params/blob/master/changelog.md"
homepage = "https://github.com/joaonc/pytest_params"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

