[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true
exclude='''
/(
    src/show_dialog/ui/forms
  | \.venv.*
  | \venv.*
)/
'''

[tool.isort]
line_length = 100
profile = 'black'
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
skip = ['src/show_dialog/ui/forms']
skip_glob = ['**/.venv*', '**/venv*']

[tool.mypy]
# Technical notes on exclusions:
# 1 The regex for all folders needs to be in a one line string.
# 2 The `.` doesn't need to be escaped. Escape with `\\.` for a fully compatible regex.
exclude = '^venv*|^.venv*|.git|.eggs|build|dist|.cache|.pytest_cache|.mypy_cache|.vscode|.idea|tasks.py'
python_version = '3.10'
warn_return_any = true
warn_unused_configs = true
# Disable the warning below, from type hinting variables in a function.
# By default, the bodies of untyped functions are not checked, consider using --check-untyped-defs
disable_error_code = 'annotation-unchecked'

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['invoke']

[tool.pytest.ini_options]
testpaths = ['tests']

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pytest_params'
version = '0.1.0'
description = 'Simplified pytest test case parameters.'
readme = 'README.rst'
authors = [
  {name = 'Joao Coelho', email = '6wfon3p6d@mozmail.com'}
]
maintainers = [
  {name = 'Joao Coelho', email = '6wfon3p6d@mozmail.com'}
]
classifiers = [

]
license = {text = 'MIT license'}
dependencies = [

]

[project.optional-dependencies]
dev = [
    'coverage',  # testing
    'mypy',  # linting
    'pytest',  # testing
    'ruff'  # linting
]

[project.urls]
bugs = 'https://github.com/joaonc/pytest_params/issues'
homepage = 'https://github.com/joaonc/pytest_params'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.package-data]
'*' = ['*.*']
