[tool.ruff]
line-length = 100
target-version = 'py312'
exclude = [
    '.venv*',
    'venv*',
    'build',
    'dist',
]

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']
# E266: too many leading '#' for block comment
# E501: line too long - handled by the formatter
# E701: multiple statements on one line (colon) - conflicts with empty class definitions
#   formatted by ruff as `class FileUpdateError(Exception): ...`
# F811: redefinition of unused name from import (happens when importing pytest fixtures)
extend-ignore = ['E266', 'E501', 'E701', 'F811']

[tool.ruff.lint.isort]
# Default section order: FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[tool.ruff.format]
quote-style = 'single'

[tool.mypy]
# Technical notes on exclusions:
# 1 The regex for all folders needs to be in a one-line string.
# 2 The `.` doesn't need to be escaped. Escape with `\\.` for a fully compatible regex.
exclude = '^venv*|^.venv*|.git|.eggs|build|dist|.cache|.pytest_cache|.mypy_cache|.vscode|.idea'
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
# Disable the warning below, from type hinting variables in a function.
# By default, the bodies of untyped functions are not checked, consider using --check-untyped-defs
disable_error_code = 'annotation-unchecked'

[tool.pytest.ini_options]
testpaths = ['tests']
markers = ['flaky', 'nightly', 'performance', 'pri1']

[build-system]
requires = ['uv_build>=0.10.4,<0.11.0']
build-backend = 'uv_build'

[project]
name = 'pytest-params'
version = '0.3.0'
description = 'Simplified pytest test case parameters.'
readme = 'README.md'
authors = [{name = 'Joao Coelho'}]
license = 'MIT'
license-files = ['LICENSE.txt']
requires-python = '>=3.10'
dependencies = ['pytest>=7.0.0']
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Development Status :: 5 - Production/Stable'
]

[project.urls]
Home = 'https://github.com/joaonc/pytest-params'

[tool.typer-invoke]
modules = [
    'admin.build',
    'admin.lint',
    'admin.pip',
    'admin.test',
]
